// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/api/v1 contract > round-trips the pagination cursor and rejects malformed input 1`] = `"eyJ1cGRhdGVkQXQiOiIyMDI2LTAxLTAxVDAwOjAzOjAwLjAwMFoiLCJpZCI6InJlYy0xIn0"`;

exports[`/api/v1 contract > serializes a recording detail with every transcript and the summary 1`] = `
{
  "created_at": "2026-01-01T00:02:00.000Z",
  "device": {
    "model": "Note",
    "name": "Plaud Note",
    "serial_number": "SN123",
  },
  "duration_ms": 60000,
  "filesize_bytes": 1024,
  "has_summary": true,
  "has_transcription": true,
  "id": "rec-1",
  "links": {
    "audio": "/api/v1/recordings/rec-1/audio",
    "self": "/api/v1/recordings/rec-1",
    "transcript": "/api/v1/recordings/rec-1/transcript",
  },
  "recorded_at": "2026-01-01T00:00:00.000Z",
  "summary": {
    "action_items": [
      "Review the timeline",
    ],
    "created_at": "2026-01-01T00:06:00.000Z",
    "key_points": [
      "Roadmap update",
    ],
    "model": "fake-chat-1",
    "provider": "Custom",
    "text": "decrypted:enc-summary",
  },
  "title": "decrypted:enc-title",
  "transcript": {
    "created_at": "2026-01-01T00:05:00.000Z",
    "language": null,
    "model": "plaud-native",
    "provider": "plaud",
    "source": "plaud",
    "text": "decrypted:enc-plaud-text",
  },
  "transcripts": [
    {
      "created_at": "2026-01-01T00:04:00.000Z",
      "language": "en",
      "model": "whisper-1",
      "provider": "Custom",
      "source": "riffado",
      "text": "decrypted:enc-own-text",
    },
    {
      "created_at": "2026-01-01T00:05:00.000Z",
      "language": null,
      "model": "plaud-native",
      "provider": "plaud",
      "source": "plaud",
      "text": "decrypted:enc-plaud-text",
    },
  ],
  "updated_at": "2026-01-01T00:03:00.000Z",
}
`;

exports[`/api/v1 contract > serializes a recording with device and links 1`] = `
{
  "created_at": "2026-01-01T00:02:00.000Z",
  "device": {
    "model": "Note",
    "name": "Plaud Note",
    "serial_number": "SN123",
  },
  "duration_ms": 60000,
  "filesize_bytes": 1024,
  "has_summary": true,
  "has_transcription": true,
  "id": "rec-1",
  "links": {
    "audio": "/api/v1/recordings/rec-1/audio",
    "self": "/api/v1/recordings/rec-1",
    "transcript": "/api/v1/recordings/rec-1/transcript",
  },
  "recorded_at": "2026-01-01T00:00:00.000Z",
  "title": "decrypted:enc-title",
  "updated_at": "2026-01-01T00:03:00.000Z",
}
`;

exports[`/api/v1 contract > serializes a recording without a device 1`] = `
{
  "created_at": "2026-01-01T00:02:00.000Z",
  "device": null,
  "duration_ms": 60000,
  "filesize_bytes": 1024,
  "has_summary": false,
  "has_transcription": false,
  "id": "rec-1",
  "links": {
    "audio": "/api/v1/recordings/rec-1/audio",
    "self": "/api/v1/recordings/rec-1",
    "transcript": "/api/v1/recordings/rec-1/transcript",
  },
  "recorded_at": "2026-01-01T00:00:00.000Z",
  "title": "decrypted:enc-title",
  "updated_at": "2026-01-01T00:03:00.000Z",
}
`;

exports[`/api/v1 contract > serializes a summary, mapping non-array fields to null 1`] = `
{
  "action_items": null,
  "created_at": "2026-01-01T00:06:00.000Z",
  "key_points": null,
  "model": "fake-chat-1",
  "provider": "Custom",
  "text": "decrypted:enc-summary",
}
`;
